# m3-cli

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  README.md  README_BUILD.md  build.py  build_win_exe_setup.iss  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.gitlab/ci/: dev.gitlab-ci.yml  release.gitlab-ci.yml  rules.gitlab-ci.yml  sonar.gitlab-ci.yml
buildtools/: README_BUILD.md  build_deb.sh  build_win_exe_setup.iss
docs/: Artifact Overwrite Confirmation.md  Reset Cache in CloudFront.md  m3-cli-cicd-workflow.md
m3cli/: commands_def.json  commands_def_backup.json  m3.py
m3cli/customizer/: README.md
m3cli/docs/: README.md  requirements.txt
m3cli/docs/commons/: m3_intro.md  m3_setup_guide.md
m3cli/utils/: utilities.py
tests/test_plugins/: __init__.py  test_activate_platform_service.py  test_add_schedule_instances.py  test_add_service_section.py  test_apply_terraform_template.py  test_aws_management_console.py  test_azure_management_console.py  test_cost_object_report.py  test_cost_usage_report.py  test_create_image.py  test_create_instance_quota.py  test_create_key.py  test_create_schedule.py  test_deactivate_platform_service.py  test_delete_schedule_instances.py  test_delete_service_section.py  test_delete_storage.py  test_delete_tags.py  test_describe_events.py  test_describe_keys.py  test_describe_platform_services.py
tests/test_services/test_aes_cipher_service/: __init__.py  test_aes_cipher_service.py
tests/test_utils/: test_cloud_utils.py  test_interactivity_utils.py  test_utilities.py
(+17 files in other folders)
