[metadata]
name = m3-cli
version = 3.101.0
author = maestrocloudcontrol
author_email = support@maestrocontrol.cloud
keywords = Maestro3, Command Line Interface, CLI, CLOUD

[options]
packages = find:
include_package_data = True
install_requires =
    setuptools==68.2.1
    click==7.1.2
    requests==2.31.0
    tabulate==0.9.0
    pika==1.0.0b1
    cryptography==41.0.3
    jsonschema==3.2.0
    pyyaml==6.0.1
    Pillow==10.0.0
    packaging==21.3
    beautifulsoup4==4.10.0

[options.entry_points]
console_scripts =
    m3-cli=m3cli.m3:m3

[options.data_files]
m3cli = m3cli/commands_def.json, m3cli/m3cli_complete/bash_m3cli_complete.sh, m3cli/m3cli_complete/zsh_m3cli_complete.sh, m3cli/m3cli_complete/m3cli_complete.py, m3cli/m3cli_complete/access_meta.json

[options.packages.find]
exclude = tests*